--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -247,4 +247,7 @@
     <!-- Default for Settings.Global.DEVELOPMENT_SETTINGS_ENABLED -->
     <integer  name="def_development_settings">1</integer>
 
+    <!-- Default for Settings.System.STATUS_BAR_NOTIF_COUNT. -->
+    <integer name="def_notif_count">0</integer>
+
 </resources>
