--- a/packages/SystemUI/res/values/evolution_strings.xml
+++ b/packages/SystemUI/res/values/evolution_strings.xml
@@ -10,6 +10,7 @@
     <!-- Statusbar Icons -->
     <string name="status_bar_call_strength">Call strength</string>
     <string name="status_bar_data_saver">Data saver</string>
+    <string name="status_bar_ims">VoLTE/VoWiFi</string>
     <string name="status_bar_nfc">NFC</string>
     <string name="status_bar_vpn">VPN</string>
 
