base: Screen Stabiization [1/2]
* New Settings menu integrated into QS itself (long click)
* Thanks to SuperDroidBond for keeping this alive till Pie

Change-Id: Ibccb8d78d79938f42241ea3690ea66c3aace89ea
Signed-off-by: rituj <ritujbeniwal@gmail.com>

ScreenStabilization Tile: Fix layout

Signed-off-by: rituj <ritujbeniwal@gmail.com>
Change-Id: I973fd8dbef971ed726ebcf323fbfb35aed4495bf

--- a/packages/SystemUI/res/values/evolution_strings.xml
+++ b/packages/SystemUI/res/values/evolution_strings.xml
@@ -284,4 +284,14 @@
     <string name="calendar_title_tile">Add Event</string>
     <string name="camera_title_tile">Camera</string>
     <string name="call_title_tile">Dialer</string>
+
+     <!-- Screen Stabilization -->
+    <string name="quick_settings_stabilization_label">Screen Stabilization</string>
+    <string name="quick_settings_stabilization_off">Stabilization is disabled</string>
+    <string name="quick_settings_stabilization_on">Stabilization is enabled</string>
+    <string name="low_label">Low</string>
+    <string name="high_label">High</string>
+    <string name="stabilization_velocity_friction">Velocity Friction</string>
+    <string name="stabilization_velocity_amplitude">Velocity Amplitude</string>
+    <string name="stabilization_position_friction">Position Friction</string>
 </resources>
