--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -109,7 +109,7 @@
 
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_default" translatable="false">
-        wifi,bt,dnd,flashlight,rotation,battery,cell,airplane,cast
+        wifi,bt,dnd,flashlight,rotation,battery,cell,airplane,cast,screenstabilization
     </string>
 
     <!-- The minimum number of tiles to display in QuickSettings -->
@@ -117,7 +117,7 @@
 
     <!-- Tiles native to System UI. Order should match "quick_settings_tiles_default" -->
     <string name="quick_settings_tiles_stock" translatable="false">
-        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,nfc,location,hotspot,inversion,saver,dark,work,cast,night,alarm,ambient_display,aod,caffeine,calc,calendar,call,camera,compass,dataswitch,gaming,heads_up,hwkeys,immersive,livedisplay,locale,music,navbar,powershare,reading_mode,reboot,screenrecord,screenshot,sleepscreen,smartpixels,sound,soundsearch,sync,usb_tether,volume_panel,vpn
+        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,nfc,location,hotspot,inversion,saver,dark,work,cast,night,alarm,ambient_display,aod,caffeine,calc,calendar,call,camera,compass,dataswitch,gaming,heads_up,hwkeys,immersive,livedisplay,locale,music,navbar,powershare,reading_mode,reboot,screenrecord,screenshot,screenstabilization,sleepscreen,smartpixels,sound,soundsearch,sync,usb_tether,volume_panel,vpn
     </string>
 
     <!-- The tiles to display in QuickSettings -->
