SystemUI: Add default data sub switcher in CellularTile
Change-Id: I0dbc4e54b8b4f33c4d9a537f0e1432dfb24972f5

QS: Persist default data sub to db

See https://review.lineageos.org/c/LineageOS/android_packages_apps_Settings/+/235129

Change-Id: I6b49fd3f903cfedf4946ee0ee890ea0a4ba63f9b

DataUsageDetailView: Unset OnCheckedChangeListener of data sub switcher

Change-Id: Ib577cf2138b003de99943bb395da7dfd8066d351

Change-Id: Iac45ec186cf81915c318dba37f43136609d579aa

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -266,4 +266,7 @@
     <string name="accessibility_quick_settings_gaming_mode_on">Gaming mode on</string>
     <string name="accessibility_quick_settings_gaming_mode_off">Gaming mode off</string>
 
+    <!-- Text for switch default data sub in expanded CellularTile -->
+    <string name="use_data">Use %s for data</string>
+
 </resources>
