[SQUASH] Switch to YAAP Network traffic impl [1/2]
[joeyhuab]
* Squashed with all authors

base: Bring back traffic indicator for all!

arrow-edits:
 - adapt to Q

idoybh: Add settings value to backup, adapt to 12

Change-Id: Ia41474a262b258f8a2d4d7b10a15891729ffd17c

SystemUI: Add network traffic monitor properly to statusbar icons

Make it behave fine on devices that don't have much status bar space
(e.g. because of a display cutout/"notch")

Arrow edits:- nuke from status_bar.xml

Change-Id: Icbb2715ae78ce06bd3b79dc23ff491db202985f2

base: Option for Up, Down as well for Network Traffic [1/2]

idoybh: Add settings value to backup array

Change-Id: I99f1f8a2a770b6900bccdcc20eae301185b57224

base: NetworkTraffic: Show arrows in statusbar [1/2]

arrow-edits:
adapt code to our dynamic arrows method

SKULSHADY: Reverse logic of the toggle
spezi77: Adapt for statusbar traffic indicator

Change-Id: Ie50dbe3f54495d4b5c0c0a51969df595de7a1386

Network Traffic: Add Option for Users to select size of Single Traffic (Up/Down) Font Size

Thanks to @SKULSHADY's commit - Havoc-OS/android_frameworks_base@20e6c63#diff-a6b14ee550885fae2c9316575fd6ce9c

idoybh: Add settings value to backup array

Change-Id: I49ea61d56d0cb28523b70d3d3971a6508c927bac

NetworkTraffic: Fix gravity

TextView.setText() has left gravity by default. It's ugly in statusbar

TrafficSB: Pass the animate bool

- this should fix the indicator acting wonky according to this change
  introduced here

Refer:
https://github.com/ArrowOS/android_frameworks_base/commit/620ea2c7550ea8817ae055dbf983bf5af525d6a4#diff-b4e0e9525d5c2d3dcd9c31861671714d

Change-Id: I169f8586959a57e1b2b62a241800e107b5092902

Bring back traffic indicator for Notch Devices !!!

spezi77: Adapted for the reversed toggle to show arrows in statusbar network traffic indicators

Change-Id: I0e2aaf2c6bcc69c5bd4c68be507e3b241cf6c6cf

NetworkTraffic: Allow user to choose positioning [1/2]

SDB - Bring it for PiA Devices aka Notch Devices
** Cleanup Codes

--- a/packages/SystemUI/res/layout/system_icons.xml
+++ b/packages/SystemUI/res/layout/system_icons.xml
@@ -23,15 +23,34 @@
     android:paddingTop="@dimen/status_bar_icons_padding_top"
     android:paddingStart="@dimen/status_bar_icons_padding_start"
     android:paddingEnd="@dimen/status_bar_icons_padding_end"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical|end">
+
+    <com.android.keyguard.AlphaOptimizedLinearLayout
+        android:id="@+id/network_traffic_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:gravity="center_vertical|end"
+        >
+
+        <com.android.systemui.statusbar.policy.NetworkTrafficSB
+            android:id="@+id/networkTraffic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
+            android:gravity="center_vertical|end"
+            android:autoSizeTextType="uniform" />
+
+    </com.android.keyguard.AlphaOptimizedLinearLayout>
 
     <com.android.systemui.statusbar.phone.StatusIconContainer android:id="@+id/statusIcons"
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingEnd="@dimen/signal_cluster_battery_padding"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"/>
+        android:gravity="center_vertical|end"
+        android:orientation="horizontal" />
 
     <com.android.systemui.battery.BatteryMeterView android:id="@+id/battery"
         android:layout_height="wrap_content"
