fwb: core: Make LiveDisplay optional
Setting config_liveDisplayAvailable to true individual devices can
choose to use LiveDisplay.

Change-Id: I5d75f53b77a673278a735a2a3033582da74af2a2
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -414,4 +414,7 @@
 
     <!-- Ambient notification light color -->
     <integer name="config_ambientNotificationDefaultColor">0xFF1A73E8</integer>
+
+    <!-- Default state for LiveDisplay -->
+    <bool name="config_liveDisplayAvailable">false</bool>
 </resources>
