--- a/packages/SystemUI/res/values/evolution_colors.xml
+++ b/packages/SystemUI/res/values/evolution_colors.xml
@@ -32,4 +32,7 @@
     <!-- QS -->
     <color name="qs_status_bar_background">#ff000000</color>
 
+    <!-- Color of the FOD view -->
+    <color name="config_fodColor">#00ffff</color>
+
 </resources>
