--- a/packages/SettingsLib/res/values/evolution_strings.xml
+++ b/packages/SettingsLib/res/values/evolution_strings.xml
@@ -16,4 +16,10 @@
     <!-- For estimated battery in QuickQS -->
     <string name="power_discharge_by_only_short">Until %1$s</string>
 
+    <!-- Bluetooth Audio Codec Channel Mode -->
+    <string name="bluetooth_a2dp_codec_channel_mode_default">Use System Selection (Default)</string>
+    <string name="bluetooth_a2dp_codec_channel_mode_mono">Mono</string>
+    <string name="bluetooth_a2dp_codec_channel_mode_stereo">Stereo</string>
+    <string name="bluetooth_a2dp_codec_channel_mode_dual_channel">Dual Channel</string>
+
 </resources>
