--- a/packages/SystemUI/res/layout/ambient_indication_inner.xml
+++ b/packages/SystemUI/res/layout/ambient_indication_inner.xml
@@ -7,8 +7,9 @@
     android:visibility="invisible"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="64dp"
-    android:layout_marginEnd="64dp"
+    android:layout_marginBottom="71.0dip"
+    android:layout_marginStart="64.0dip"
+    android:layout_marginEnd="64.0dip"
     android:forceHasOverlappingRendering="false"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
