--- a/packages/SystemUI/res/drawable/stat_sys_wifi_inout.xml
+++ b/packages/SystemUI/res/drawable/stat_sys_wifi_inout.xml
@@ -23,9 +23,9 @@
     <path
         android:name="in"
         android:fillColor="#FFFFFFFF"
-        android:pathData="M19.2,14.1l-2,3.5l-2,-3.5H19.2z" />
+        android:pathData="M8.7,18.3l-2.0,3.5l-2.0,-3.5z" />
     <path
         android:name="out"
         android:fillColor="#FFFFFFFF"
-        android:pathData="M2.5,17.6l2,-3.5l2,3.5H2.5z" />
+        android:pathData="M0.5,21.8l2.0,-3.5l2.0,3.5z" />
 </vector>
