pocket: introduce pocket bridge
This service communicates pocket state to the pocket judge kernel driver.
It maintains the pocket state by binding to the pocket service.

Ticket: NOUGAT-49

Change-Id: Iee77f767f23d3f77a0d1d871f9305f3b3c6d6630
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -529,4 +529,8 @@
 
     <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
     <bool name="config_intrusiveBatteryLed">@bool/config_intrusiveNotificationLed</bool>
+
+    <!-- Defines the sysfs attribute path used by pocket bridge
+         to communicate pocket state to the pocket judge kernel driver. -->
+    <string name="config_pocketBridgeSysfsInpocket"></string>
 </resources>
