--- a/packages/SystemUI/res/values/evolution_config.xml
+++ b/packages/SystemUI/res/values/evolution_config.xml
@@ -56,4 +56,7 @@
 
     <!-- Whether usage of the proximity sensor during doze is supported -->
     <bool name="doze_proximity_sensor_supported">true</bool>
+
+    <!-- Allow devices to use unordinary cutout overlays -->
+    <bool name="config_customCutout">false</bool>
 </resources>
