[1/3] Allow changing face unlock method when locked
Change-Id: I9a8e812bbe869dead94d631fa0a2f53f3bf67cc6
Signed-off-by: Master <mhmdeveloperofficial@gmail.com>

--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -599,4 +599,7 @@
         <item>com.android.contacts</item>
         <item>com.android.documentsui</item>
     </string-array>
+
+    <!-- Enable face auth only when swiping security view -->
+    <bool name="config_faceAuthOnlyOnSecurityView">false</bool>
 </resources>
