SystemUI: Fix QS Header corner blank space
Signed-off-by: rajkale99 <kaleraj.rk@gmail.com>
Signed-off-by: RakeshBatra <raakesh.batra@rediffmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/packages/SystemUI/res/layout/qs_panel.xml
+++ b/packages/SystemUI/res/layout/qs_panel.xml
@@ -33,17 +33,17 @@
     <View
         android:id="@+id/quick_settings_gradient_view"
         android:layout_width="match_parent"
-        android:layout_height="126dp"
+        android:layout_height="166dp"
         android:clipToPadding="false"
         android:clipChildren="false"
-        android:background="@android:color/transparent" />
+        android:background="@drawable/qs_bg_gradient" />
 
     <!-- Black part behind the status bar -->
     <LinearLayout
         android:id="@+id/quick_settings_status_bar_background"
         android:layout_width="match_parent"
         android:layout_height="@*android:dimen/quick_qs_offset_height"
-        android:background="@android:color/transparent" >
+        android:background="@color/quick_settings_status_bar_background_color">
 
         <ImageView android:id="@+id/qs_header_image_view"
             android:layout_width="match_parent"
