PocketLock: Make using light sensor optional
* On some devices using light sensor may break autobrightness

Change-Id: I2bb4aad1ecc6808a4546dfdcada4335074d0d40e
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -536,6 +536,7 @@
 
     <!-- Pocket Lock -->
     <bool name="config_pocketModeSupported">true</bool>
+    <bool name="config_pocketUseLightSensor">false</bool>
 
     <!-- Defines custom OEM sensor for pocket detection. -->
     <string name="config_pocketJudgeVendorSensorName"></string>
