--- a/core/res/res/values/evolution_symbols.xml
+++ b/core/res/res/values/evolution_symbols.xml
@@ -115,4 +115,7 @@
 
     <!-- Global Actions pref list -->
     <java-symbol type="array" name="custom_config_globalActionsList" />
+
+    <!-- Location indicator -->
+    <java-symbol type="drawable" name="stat_sys_location" />
 </resources>
