--- a/packages/SystemUI/res/values/evolution_dimens.xml
+++ b/packages/SystemUI/res/values/evolution_dimens.xml
@@ -110,4 +110,8 @@
     <dimen name="qs_header_image_top_margin">0dp</dimen>
     <dimen name="qs_header_image_bottom_margin">0dp</dimen>
     <dimen name="qs_header_image_min_height">50dp</dimen>
+
+    <!-- Udfps fingerprint animation -->
+    <dimen name="udfps_animation_size">280dp</dimen>
+    <dimen name="udfps_animation_offset">0dp</dimen>
 </resources>
