--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -126,5 +126,6 @@
         <item>airplane</item>
         <item>settings</item>
         <item>lockdown</item>
+        <item>devicecontrols</item>
     </string-array>
 </resources>
