--- a/packages/SystemUI/res/values/evolution_colors.xml
+++ b/packages/SystemUI/res/values/evolution_colors.xml
@@ -7,4 +7,6 @@
     <color name="accent_device_default_light">@*android:color/accent_device_default_light</color>
 
     <color name="reticker_background_color">@android:color/system_neutral1_50</color>
+
+    <color name="qs_ripple_color">@android:color/system_accent1_400</color>
 </resources>
