--- a/packages/SystemUI/res/values/evolution_strings.xml
+++ b/packages/SystemUI/res/values/evolution_strings.xml
@@ -219,6 +219,8 @@
     <string name="qs_data_switch_label">Switch data card</string>
     <string name="qs_data_switch_toast_0">Currently no SIM card is inserted</string>
     <string name="qs_data_switch_toast_1">Currently only one SIM card is inserted</string>
+    <string name="qs_data_switch_text_1">SIM 1</string>
+    <string name="qs_data_switch_text_2">SIM 2</string>
     <string name="qs_data_switch_changed_1">Switch data card to SIM 1.</string>
     <string name="qs_data_switch_changed_2">Switch data card to SIM 2.</string>
 
