DisplayModeDirector: Allow to enforce user selected resolution
* On some devices with QHD supported but FHD+ default set in dtb, getDesiredDisplayModeSpecs() always vote for default display mode's width/height,
  which causes it selects a display mode with FHD+ resolution while user actually using QHD resolution. This makes device randomly jump to another
  resolution in some apps (e.g. Google dialer).

  This patch hooks primarySummary.width/height to user selected resolution beforing filtering out desired display mode.
  It's a bit hack, but as seen in reversed code, Oplus just did similar thing.

  To enable this hack, set config_forceToUseSelectedResolution to true.

Change-Id: Ie611409be6633c2179ae01ce21b31e5940cfd7eb
Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/core/res/res/values/evolution_symbols.xml
+++ b/core/res/res/values/evolution_symbols.xml
@@ -349,4 +349,7 @@
 
     <!-- Boost Framework -->
     <java-symbol type="bool" name="config_supportsBoostFramework" />
+
+    <!-- Enforce DisplayModeDirector to select user preferred resolution -->
+    <java-symbol type="bool" name="config_forceToUseSelectedResolution" />
 </resources>
