--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -544,4 +544,7 @@
 
     <!-- Boost Framework -->
     <bool name="config_supportsBoostFramework">false</bool>
+
+    <!-- Enforce DisplayModeDirector to select user preferred resolution -->
+    <bool name="config_forceToUseSelectedResolution">false</bool>
 </resources>
