--- a/core/res/res/values/evolution_symbols.xml
+++ b/core/res/res/values/evolution_symbols.xml
@@ -306,4 +306,7 @@
 
     <!-- Camera key type -->
     <java-symbol type="bool" name="config_singleStageCameraKey" />
+
+    <!-- Ignore post running notifications for selected apps -->
+    <java-symbol type="array" name="config_postNotificationIgnoredApps" />
 </resources>
