--- a/packages/SystemUI/res/values/evolution_config.xml
+++ b/packages/SystemUI/res/values/evolution_config.xml
@@ -111,4 +111,7 @@
 
     <!-- FPS measure interval in milliseconds, default 1000 -->
     <integer name="config_fpsReadInterval">1000</integer>
+
+    <!-- Unlock ripple animation -->
+    <bool name="config_enableUnlockRippleAnimation">true</bool>
 </resources>
