BoostFramework: Guard it with overlay
Change-Id: I5e22a590b0f1f0e9a678d45d06bb262021cf84bb
(cherry picked from commit e03f9fddff5a7e952f161063cd194372328180b5)

--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -477,4 +477,7 @@
 
     <!-- Display color inversion availability -->
     <bool name="config_displayInversionAvailable">true</bool>
+
+    <!-- Boost Framework -->
+    <bool name="config_supportsBoostFramework">false</bool>
 </resources>
