--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -550,4 +550,7 @@
 
     <!-- Spoof GMS as Pixel Tablet -->
     <bool name="config_spoofasTablet">false</bool>
+
+    <!-- Whether to use Richtap vibration -->
+    <bool name="config_usesRichtapVibration">false</bool>
 </resources>
