--- a/packages/SystemUI/res/values-night/evolution_colors.xml
+++ b/packages/SystemUI/res/values-night/evolution_colors.xml
@@ -5,4 +5,8 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <color name="sfps_chevron_fill">@color/material_dynamic_secondary20</color>
+
+    <!-- QS Panel Style -->
+    <color name="qs_translucent_bg">#0FFFFFFF</color>
+    <color name="qs_white_bg">@android:color/system_neutral1_0</color>
 </resources>
