--- a/packages/SystemUI/res/values/evolution_colors.xml
+++ b/packages/SystemUI/res/values/evolution_colors.xml
@@ -17,4 +17,8 @@
     <color name="shadow">#14000000</color>
     <color name="neumorph_outline_start">#FFBDBDBD</color>
     <color name="neumorph_outline_end">#FFF0F0F0</color>
+
+    <!-- QS Panel Style -->
+    <color name="qs_translucent_bg">#59FFFFFF</color>
+    <color name="qs_white_bg">@android:color/system_neutral1_0</color>
 </resources>
