base: Support for device specific input Filter
Change-Id: I4cdd284bbd064ead6108bac8b54f6a69a9b655e0
Signed-off-by: Edward Wu <bluehome.wu@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -462,4 +462,8 @@
 
     <!-- Whether device supports in-display fingerprint when screen is off -->
     <bool name="config_supportsScreenOffUdfps">false</bool>
+
+    <!-- InputFilter Class-->
+    <string name="config_deviceInputFilterLibs" translatable="false"></string>
+    <string name="config_deviceInputFilterClasses" translatable="false"></string>
 </resources>
