--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -87,6 +87,7 @@
     <bool name="config_allowMediaUidForCameraServiceProxy">false</bool>
 
     <!-- Smart charging -->
+    <bool name="config_smartChargingAvailable">false</bool>
     <integer name="config_smartChargingBatteryLevel">80</integer>
     <integer name="config_smartChargingBatteryResumeLevel">60</integer>
     <string name="config_SmartChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/charging_enabled</string>
