--- a/core/res/res/values/evolution_symbols.xml
+++ b/core/res/res/values/evolution_symbols.xml
@@ -77,6 +77,7 @@
     <java-symbol type="bool" name="config_allowMediaUidForCameraServiceProxy" />
 
     <!-- Smart charging -->
+    <java-symbol type="bool" name="config_smartChargingAvailable" />
     <java-symbol type="integer" name="config_smartChargingBatteryLevel" />
     <java-symbol type="integer" name="config_smartChargingBatteryResumeLevel" />
     <java-symbol type="string" name="config_SmartChargingSysfsNode" />
