--- a/packages/SystemUI/res/values-night/evolution_colors.xml
+++ b/packages/SystemUI/res/values-night/evolution_colors.xml
@@ -16,4 +16,6 @@
 -->
 <resources>
     <color name="reticker_background_color">@android:color/system_neutral1_900</color>
+
+    <color name="sfps_chevron_fill">@color/material_dynamic_secondary20</color>
 </resources>
