--- a/packages/SystemUI/res/values/evolution_dimens.xml
+++ b/packages/SystemUI/res/values/evolution_dimens.xml
@@ -120,4 +120,7 @@
 
     <!-- HD calling icon -->
     <dimen name="signal_icon_viewport_size">24dp</dimen>
+
+    <!-- QS A11 Style -->
+    <dimen name="custom_qs_panel_padding_top">0dp</dimen>
 </resources>
