SystemUI: QS Header Image extended settings [1/2]
* Add settings for:
    * tint
    * height
    * paddings
    * landscape (toggle)
    * transparency
    * custom hader image picker
* Validate and limit height and tint opacity
* Adjust ImageHelper to receive radius when rounding an image
  (used by Settings to display rounded header previews)

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/packages/SystemUI/res/values/evolution_dimens.xml
+++ b/packages/SystemUI/res/values/evolution_dimens.xml
@@ -114,6 +114,10 @@
     <!-- QS A11 Style -->
     <dimen name="custom_qs_panel_padding_top">0dp</dimen>
 
-    <!-- QS Header height full -->
+    <!-- QS header image -->
     <dimen name="qs_header_height_full">200dp</dimen>
+    <dimen name="qs_header_image_side_margin">0dp</dimen>
+    <dimen name="qs_header_image_top_margin">0dp</dimen>
+    <dimen name="qs_header_image_bottom_margin">0dp</dimen>
+    <dimen name="qs_header_image_min_height">50dp</dimen>
 </resources>
