Add Ambient Customizations [1/2]
This adds the option to add custom text and a custom image on the ambient screen. This option is still in development, so be patient, the bugs that arise will be resolved.
Based on OmniROM Edge Lighting and Custom Headers.

[SuperDroidBond: adapt for R + A13 & put it behind notification lights]

Good Work by @/TikkiX2

Change-Id: I8bbda7e908ef4bae892c59fdbcf6032a799b3f5b

fixup! Ambient Customizations

SDB:
1. Fix Text Animation
2. Fix Pulse Lights not visible if Ambient Image activated
3. Catch NPE in KeyguardVisibilityHelper
4. Misc. fixes for Ambient Text & Images

minaripenguin:
1. Cleanup unused resources
2. make ambient text follow clock font
3. Minor code refactoring

[elpaablo]:
* Port to Android 14

Change-Id: Icbc66effd362d5e7d4e77d977960778bfc19dc7a

Co-authored-by: TikkiTikki <radstylemusic@gmail.com>
Co-authored-by: SuperDroidBond <superdroidbond@yahoo.com>
Co-authored-by: minaripenguin <minaripenguin@users.noreply.github.com>
Signed-off-by: SuperDroidBond <superdroidbond@yahoo.com>
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>
Signed-off-by: elpaablo <donopwhile1@gmail.com>
Signed-off-by: mukesh22584 <mks22584@gmail.com>

--- a/packages/SystemUI/res/values/evolution_dimens.xml
+++ b/packages/SystemUI/res/values/evolution_dimens.xml
@@ -120,4 +120,7 @@
 
     <!-- HD calling icon -->
     <dimen name="signal_icon_viewport_size">24dp</dimen>
+
+    <!-- Base Multiplier for dp to px. -->
+    <dimen name="amb_font_base_multiplier_dp">1dp</dimen>
 </resources>
