--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -148,7 +148,7 @@
     <bool name="config_fpCancelIfNotIdle">false</bool>
 
     <!-- Whether the device supports Smart Pixels -->
-    <bool name="config_supportSmartPixels">false</bool>
+    <bool name="config_supportSmartPixels">true</bool>
 
     <!-- More battery styles -->
 <string name="config_batterymeterLandPerimeterPathSignal" translatable="false">
