--- a/core/res/res/values/evolution_symbols.xml
+++ b/core/res/res/values/evolution_symbols.xml
@@ -315,4 +315,11 @@
 
     <!-- Leds -->
     <java-symbol type="bool" name="config_intrusiveBatteryLed" />
+
+    <!-- Last app switch animations -->
+    <java-symbol type="anim" name="last_app_in" />
+    <java-symbol type="anim" name="last_app_out" />
+
+    <!-- Back kill -->
+    <java-symbol type="string" name="app_killed_message" />
 </resources>
