--- a/packages/SystemUI/res/values/evolution_strings.xml
+++ b/packages/SystemUI/res/values/evolution_strings.xml
@@ -238,4 +238,6 @@
     <string name="quick_settings_preferred_network_lte">4g / LTE</string>
     <string name="quick_settings_preferred_network_nr">5g / NR</string>
     <string name="quick_settings_preferred_network_unsupported">Unsupported</string>
+
+    <string name="face_unlock_recognizing">Recognizing face...</string>
 </resources>
