--- a/packages/SystemUI/res/values-hu-rHU/evolution_strings.xml
+++ b/packages/SystemUI/res/values-hu-rHU/evolution_strings.xml
@@ -45,7 +45,7 @@
     <!-- Bluetooth dialog -->
     <string name="turn_on_bluetooth">Bluetooth-használat</string>
     <string name="bluetooth_is_off">A Bluetooth ki van kapcsolva</string>
-    <string name="tap_a_device_to_connect">Kapcsolódáshoz koppintson a kívánt készülékre</string>
+    <string name="tap_a_device_to_connect">Érintse meg fel- vagy lecsatlakoztatáshoz</string>
     <!-- QuickSettings: InternetDialog: Summary for how many devices are connected to the hotspot [CHAR LIMIT=NONE] -->
     <plurals name="quick_settings_internet_hotspot_summary_num_devices">
         <item quantity="one">%d készülék csatlakoztatva</item>
