PPU: Spoof as Pixel Tab for tablets
Change-Id: I2d5c60dc144d56ed1957c5e2750fc60831bf2334

--- a/core/res/res/values/evolution_symbols.xml
+++ b/core/res/res/values/evolution_symbols.xml
@@ -383,4 +383,7 @@
 
     <!-- Whether Pixel props is enabled -->
     <java-symbol type="bool" name="config_enablePixelProps" />
+
+    <!-- Spoof GMS as Pixel Tablet -->
+    <java-symbol type="bool" name="config_spoofasTablet" />
 </resources>
