--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -578,4 +578,7 @@
 
     <!-- Whether Pixel props is enabled -->
     <bool name="config_enablePixelProps">true</bool>
+
+    <!-- Spoof GMS as Pixel Tablet -->
+    <bool name="config_spoofasTablet">false</bool>
 </resources>
