core: res: Add ParanoidSense into privacy indicator exemption list
Change-Id: I28477999948c1c9ea28088c04722e6932a462264

--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -525,6 +525,7 @@
         <item>com.qualcomm.qti.cne</item>
         <item>com.shannon.imsservice</item>
         <item>org.pixelexperience.faceunlock</item>
+        <item>co.aospa.sense</item>
     </string-array>
 
     <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
