--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -420,7 +420,7 @@
     <dimen name="config_keyboardBrightnessSettingDefaultFloat">1.0</dimen>
 
     <!-- Whether device can force navbar disabling -->
-    <bool name="config_canForceDisableNavigationBar">false</bool>
+    <bool name="config_canForceDisableNavigationBar">true</bool>
 
     <!-- Whether device supports gestures on fingerprint sensor -->
     <bool name="config_supportsGesturesOnFingerprintSensor">false</bool>
